--- a/css/frontend.css
+++ b/css/frontend.css
@@ -722,4 +722,3 @@
 	width: 100%;
 	background: transparent;
 }
-.test{}
